--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12078,6 +12078,31 @@ pre .code {
   background-position: center center;
 }
 
+
+@media only screen and (max-width: 600px) {
+  .header {
+    position: relative;
+    height: 100vh;
+    min-height: 600px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-image: url(../imgs/responsive.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+}
+
 .header .overlay {
   position: absolute;
   top: 0;
