--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -50,6 +50,18 @@
   box-sizing: border-box;
 }
 
+.map-me {
+  margin:0 0 -5px;
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  }
+  .map-me #map iframe {
+  width: 100%;
+  height: 378px;
+  }
+
 #contact{
   background-color: #202124;
 }
